packages/template-compiler/src/grammer.txt
VAR_DECLERATION = @let var = string;

ELEMENT_NAME = string

INTERPOLATION = {string} | (string)

ATTRIBUTE_NAME = ($|@|#)?string

ATTRIBUTE_VALUE = "string" | 'string' | INTERPOLATION

STRUCTURAL_DIRECTIVE = IF | FOR | SWITCH

ATTRIBUTE = ATTRIBUTE_NAME (= ATTRIBUTE_VALUE)? 

NODE = ELEMENT | STRUCTURAL_DIRECTIVE

STRUCTURAL_DIRECTIVE_BODY = {NODE*}

IF = @if(INTERPOLATION) STRUCTURAL_DIRECTIVE_BODY
    (@else-if(INTERPOLATION) STRUCTURAL_DIRECTIVE_BODY)*
    (@else) STRUCTURAL_DIRECTIVE_BODY

FOR = @for((itemVar | indexVar, itemVar) : interpolation (; key = trackFnMember)?) STRUCTURAL_DIRECTIVE_BODY
    # itemVar/indexVar are plain identifiers bound for the body (array: indexVar is the index, object: indexVar is the key)
    # trackFnMember is a bare reference to a class method, e.g. `key = trackById`, called as trackFnMember(item, indexOrKey)

SWITCH = @switch(INTERPOLATION){
    (@case(string | number)STRUCTURAL_DIRECTIVE_BODY)*
    @default STRUCTURAL_DIRECTIVE_BODY
}

ELEMENT = <ELEMENT_NAME ATTRIBUTE* /> | <ELEMENT_NAME ATTRIBUTE* > NODE* </ELEMENT>
